2008-07-24  Brian Warner  <warner@lothar.com>

	* buildbot/process/buildstep.py (BuildStep.setProperty): provide a
	default value for source=, to accomodate custom buildsteps that
	don't otherwise provide one

	* buildbot/master.py (DebugPerspective.perspective_requestBuild):
	fix variable-name collision that broke the debugclient's 'force
	build' button
	* buildbot/clients/debug.py (DebugWidget.err): print errors

	* buildbot/test/test_bonsaipoller.py
	(TestBonsaiPoller.testParserWorksAfterInvalidResult): increment
	the .lastPoll timestamp between calls to _process_changes,
	otherwise the test fails on a machine with low-res time.time()

	* setup.py: reduce the setuptools-visible dependency on Twisted to
	be >=2.0.0 (rather than >=2.4.0), since we can handle older
	Twisteds without problems.

	* NEWS: update with recent changes in preparation for the upcoming
	release

2008-07-21  Dustin J. Mitchell  <dustin@zmanda.com>

	* buildbot/status/web/waterfall.py (BuildTopBox): show summary
	even if there were no test results, patch from Pike
	(BuildTopBox): use the right statistic name, 'tests-failed'
	instead of just 'failed'
	* buildbot/status/tinderbox.py: fix regression, patch from Axel
	Hecht

2008-07-23  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/build.py (StatusResourceBuild.stop): fix
	failure due to typo, caught by pyflakes

	* buildbot/steps/shell.py (Test.setTestResults): set statistics
	with names like "tests-total" instead of just "total".
	(Test.getText): same
	* buildbot/test/test_steps.py (PerlModuleTest): use
	getStatistic (with "tests-total") instead of getProperty, and call
	it on the step_status, not the step itself. This pair makes the
	PerlModuleTest pass again

	* docs/buildbot.texinfo: update node names and menus
	* .darcs-boring: resurrect this file after it was accidentally
	deleted

2008-07-21  Dustin J. Mitchell  <dustin@zmanda.com>

	* buildbot/steps/shell.py (WarningCountingShellCommand): add