@@ -124,9 +124,16 @@ class StatusResourceBuild(HtmlResource):
         data += "<h2>Build Properties:</h2>\n"
         data += "<table><tr><th valign=\"left\">Name</th><th valign=\"left\">Value</th><th valign=\"left\">Source</th></tr>\n"
         for name, value, source in b.getProperties().asList():
-            data += "<tr><td>%s</td><td>%s</td><td>%s</td></tr>\n" % (name, value, source)
+            value = str(value)
+            if len(value) > 500:
+                value = value[:500] + " .. [property value too long]"
+            data += "<tr>"
+            data += "<td>%s</td>" % html.escape(name)
+            data += "<td>%s</td>" % html.escape(value)
+            data += "<td>%s</td>" % html.escape(source)
+            data += "</tr>\n"
         data += "</table>"
-            
+
         data += "<h2>Blamelist:</h2>\n"
         if list(b.getResponsibleUsers()):
             data += " <ol>\n"
